desktop done with parametric mixin

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,4 +1,11 @@
 .home {
+  .pad-bot {
+    padding-bottom:2rem;
+  }
+
+  header {
+    border-bottom: 1.5px dashed rgb(192, 192, 192);
+  }
 
   .content-section {
     margin: 30px 0;
@@ -56,6 +63,14 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+      
+      .btn {
+        .custom-btn(@br: 10px, @pad: 10px);
+        width: 80%;
+        text-align: center;
+        font-size: 2rem;
+
+      }
     }
   }
 }// home
