--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,32 @@
 // Navigation Styles here
+
+
+
+
+
+.container-nav-bar {
+  border-bottom: 1.5px dashed rgb(192, 192, 192);
+  //border: 1px red solid;
+  //width: 900px;
+  //margin: 0 auto;
+}
+
+
+
+.nav-bar {
+  //border: 1px red solid;
+  display: flex;
+  justify-content: space-between; 
+  align-items: center;
+  padding: 3rem 0rem;
+  width: 85%;
+  margin: 0 auto;
+}
+
+nav {
+  width: 50%;
+  display: flex;
+  //border: 1px red solid;
+  justify-content: space-around;
+  font-size: 1.8rem;
+}
