--- a/less/global.less
+++ b/less/global.less
@@ -39,8 +39,16 @@ img {
   height: auto;
 }
 
+.whole-container {
+  max-width: 900px;
+  width: 100%;
+  margin: 0 auto;
+  //border: 1px red solid;
+}
+
 .container {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
+  //border: 1px red solid;
 }
