--- a/less/index.less
+++ b/less/index.less
@@ -1,1 +1,15 @@
-// Follow the order in the readme
+
+@import "variables";
+@import "mixins";
+
+//General Styles Here
+@import "reset";
+@import "global";
+
+// Components Here
+
+@import "navigation";
+@import "footer";
+@import "home-page";
+
+
