--- a/less/global.less
+++ b/less/global.less
@@ -50,5 +50,7 @@ img {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
-  //border: 1px red solid;
+  @media @phone {
+    width: 90%;
+  }
 }
