--- a/less/navigation.less
+++ b/less/navigation.less
@@ -21,6 +21,13 @@
   padding: 3rem 0rem;
   width: 85%;
   margin: 0 auto;
+  @media @phone{
+    display: block;
+    text-align: center;
+    //border: 1px red solid;
+    width: 100%;
+
+  }
 }
 
 nav {
@@ -29,4 +36,8 @@ nav {
   //border: 1px red solid;
   justify-content: space-around;
   font-size: 1.8rem;
+  @media @phone {
+    width: 100%;
+    // border: 1px red solid;
+  }
 }
