--- a/css/index.css
+++ b/css/index.css
@@ -177,6 +177,11 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+@media (max-width: 500px) {
+  .container {
+    width: 90%;
+  }
+}
 .container-nav-bar {
   border-bottom: 1.5px dashed #c0c0c0;
 }
@@ -188,11 +193,23 @@ img {
   width: 85%;
   margin: 0 auto;
 }
+@media (max-width: 500px) {
+  .nav-bar {
+    display: block;
+    text-align: center;
+    width: 100%;
+  }
+}
 nav {
   width: 50%;
   display: flex;
   justify-content: space-around;
   font-size: 1.8rem;
+}
+@media (max-width: 500px) {
+  nav {
+    width: 100%;
+  }
 }
 .footer {
   width: 100%;
@@ -217,13 +234,26 @@ nav {
   flex-wrap: wrap;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+}
 .home .content-section .text-content {
   width: 48%;
   padding-right: 1%;
 }
+@media (max-width: 500px) {
+  .home .content-section .text-content {
+    width: 99%;
+  }
+}
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
+}
+@media (max-width: 500px) {
+  .home .content-section .img-content {
+    width: 99%;
+    padding-left: 0%;
+  }
 }
 .home .content-section .img-content img {
   border-radius: 10px;
@@ -231,6 +261,12 @@ nav {
 .home .inverse-content {
   padding-bottom: 30px;
   border-bottom: 2px dashed #C0C0C0;
+}
+@media (max-width: 500px) {
+  .home .inverse-content {
+    display: flex;
+    flex-direction: column-reverse;
+  }
 }
 .home .inverse-content .text-content {
   padding-left: 1%;
@@ -244,6 +280,14 @@ nav {
   width: 75%;
   margin: 0 auto 30px;
 }
+@media (max-width: 500px) {
+  .home .content-destination {
+    width: 99%;
+    border-bottom: 2px dashed #C0C0C0;
+    padding-bottom: 3rem;
+    margin-bottom: 0px;
+  }
+}
 .home .content-destination img {
   border-radius: 10px;
 }
@@ -253,9 +297,23 @@ nav {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-pick {
+    width: 80%;
+    flex-wrap: wrap;
+    justify-content: center;
+    border: none;
+    margin: 0 auto;
+  }
+}
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination {
+    width: 99%;
+  }
 }
 .home .content-pick .destination .btn {
   border-radius: 10px;
@@ -265,4 +323,9 @@ nav {
   width: 80%;
   text-align: center;
   font-size: 2rem;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination .btn {
+    width: 99%;
+  }
 }
