--- a/less/home-page.less
+++ b/less/home-page.less
@@ -12,17 +12,27 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    @media @phone {
+      //display: block;
+    }
 
    
     
     .text-content {
       width: 48%;
       padding-right: 1%;
+      @media @phone {
+        width: 99%;
+      }
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
+      @media @phone {
+        width: 99%;
+        padding-left: 0%;
+      }
 
       img {
         border-radius: 10px;
@@ -33,6 +43,10 @@
   .inverse-content {
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
+    @media @phone {
+      display: flex;
+      flex-direction: column-reverse;
+    }
 
     .text-content {
       padding-left: 1%;
@@ -48,6 +62,12 @@
   .content-destination {
     width: 75%;
     margin: 0 auto 30px;
+    @media @phone {
+      width: 99%;
+      border-bottom: 2px dashed @navigation-border;
+      padding-bottom: 3rem;
+      margin-bottom: 0px;
+    }
 
     img {
       border-radius: 10px;
@@ -59,16 +79,29 @@
     border-top: 2px dashed @navigation-border;
     display: flex;
     justify-content: space-between;
+    @media @phone {
+      width: 80%;
+      flex-wrap: wrap;
+      justify-content: center;
+      border: none;
+      margin: 0 auto;
+    }
 
     .destination {
       width: 30%;
       margin-bottom: 30px;
+      @media @phone {
+        width: 99%;
+      }
       
       .btn {
         .custom-btn(@br: 10px, @pad: 10px);
         width: 80%;
         text-align: center;
         font-size: 2rem;
+        @media @phone {
+          width: 99%;
+        }
 
       }
     }
