--- a/less/mixins.less
+++ b/less/mixins.less
@@ -18,3 +18,11 @@
   background: @bg;
   padding: @pad;
 }
+
+
+@phone: ~'(max-width: 500px)';    
+
+// // to call it   @media @phone {
+//     flex-direction: column;
+//     align-items: center;
+//   }
