--- a/less/navigation.less
+++ b/less/navigation.less
@@ -9,6 +9,9 @@
   //border: 1px red solid;
   //width: 900px;
   //margin: 0 auto;
+  position: sticky;
+  top: 0;
+  background-color: white;
 }
 
 
@@ -20,12 +23,16 @@
   align-items: center;
   padding: 3rem 0rem;
   width: 85%;
+ 
   margin: 0 auto;
+
+ 
   @media @phone{
     display: block;
     text-align: center;
     //border: 1px red solid;
     width: 100%;
+    
 
   }
 }
